--- a/resources/lang/th.json
+++ b/resources/lang/th.json
@@ -1,4 +1,6 @@
 {
+    "(and :count more error)": "(and :count more error)",
+    "(and :count more errors)": "(and :count more errors)",
     "30 Days": "30 วัน",
     "60 Days": "60 วัน",
     "90 Days": "90 วัน",
@@ -57,6 +59,7 @@
     "April": "เอพริล",
     "Are you sure you want to delete the selected resources?": "คุณแน่ใจหรือว่าคุณต้องการที่จะลบที่เลือกไว้แล้วเหรอครับ?",
     "Are you sure you want to delete this file?": "คุณแน่ใจหรือว่าคุณต้องการจะลบแฟ้มนี้?",
+    "Are you sure you want to delete this notification?": "Are you sure you want to delete this notification?",
     "Are you sure you want to delete this resource?": "คุณแน่ใจหรือว่าคุณต้องการจะลบเรื่องทรัพยากรได้?",
     "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "คุณแน่ใจหรือว่าคุณต้องการจะลบทีมนี้? ครั้งนึงเป็นทีมเป็นลบทั้งหมดของมันทรัพยากรและข้อมูลจะถูกลบออกไปอย่างถาวร.",
     "Are you sure you want to delete your account? Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "คุณแน่ใจหรือว่าคุณต้องการจะลบบัญชีของคุณ? เมื่อบัญชีของคุณคือกลบออกไป,ทั้งหมดของทรัพยากรและข้อมูลจะถูกลบออกไปอย่างถาวร. โปรดป้อนรหัสผ่านของคุณเพื่อยืนยันว่าคุณจะชอบอย่างถาวรลบบัญชีของคุณ.",
@@ -130,6 +133,7 @@
     "Choose an option": "เลือกทางเลือก",
     "Choose date": "เลือกวัน",
     "Choose File": "เลือกแฟ้ม",
+    "Choose Files": "Choose Files",
     "Choose Type": "เลือกประเภท",
     "Christmas Island": "เกาะคริสต์มาส",
     "City": "City",
@@ -149,7 +153,8 @@
     "Congo, Democratic Republic": "คองโก,งเสมอภาคนังสาธารณรัฐ",
     "Congo, the Democratic Republic of the": "Congo, the Democratic Republic of the",
     "Constant": "อย่างต่อเนื่อง",
-    "Cook Islands": "หมู่เกาะคุก Name",
+    "Cook Islands": "หมู่เกาะคุก",
+    "Copy to clipboard": "Copy to clipboard",
     "Costa Rica": "คอสตาริก้า",
     "Cote D'Ivoire": "Côte d'Ivoire",
     "could not be found.": "ไม่สามารถถูกพบก็ได้",
@@ -165,6 +170,7 @@
     "Create Team": "สร้างทีม",
     "Created.": "สร้างขึ้นมา",
     "Croatia": "โครเอเชีย",
+    "CSV (.csv)": "CSV (.csv)",
     "Cuba": "คิวบา",
     "Curaçao": "คูราซาว",
     "Current Password": "รหัสผ่านปัจจุบัน",
@@ -199,6 +205,8 @@
     "Download": "ดาวน์โหลด",
     "Download Receipt": "Download Receipt",
     "E-Mail Address": "E-Mail Address",
+    "Drop file or click to choose": "Drop file or click to choose",
+    "Drop files or click to choose": "Drop files or click to choose",
     "Ecuador": "เอกวาดอร์ name",
     "Edit": "แก้ไข",
     "Edit :resource": "แก้ไข :resource",
@@ -220,6 +228,7 @@
     "Estonia": "เอสโทเนีย name",
     "Ethiopia": "เอธิโอเปีย",
     "ex VAT": "ex VAT",
+    "Excel (.xlsx)": "Excel (.xlsx)",
     "Extra Billing Information": "Extra Billing Information",
     "Extra confirmation is needed to process your payment. Please confirm your payment by filling out your payment details below.": "เพิ่มการยืนยันคือต้องการให้โพรเซสของคุณค่าตอบแทน? ได้โปรดยืนยันการจ่ายเงินคุณโดยเติมข้อของคุณจ่ายเงินรายละเอียดด้านล่างนี้",
     "Extra confirmation is needed to process your payment. Please continue to the payment page by clicking on the button below.": "เพิ่มการยืนยันคือต้องการให้โพรเซสของคุณค่าตอบแทน? ได้โปรดต่อไปเพื่อจ่ายหน้าโดยการคลิกที่ปุ่มด้านล่างนี้",
@@ -228,6 +237,7 @@
     "Faroe Islands": "หมู่เกาะฟาโร Name",
     "February": "เดือนกุมภาพันธ์",
     "Fiji": "ฟิจิ",
+    "Filename": "Filename",
     "Finish enabling two factor authentication.": "Finish enabling two factor authentication.",
     "Finland": "ฟินแลนด์ name",
     "For your security, please confirm your password to continue.": "สำหรับมรปภ.ของคุณโปรดยืนยันรหัสผ่านของคุณดำเนินการต่อไปอีกไม่ได้",
@@ -243,9 +253,10 @@
     "French Guiana": "ฝรั่งเศสโพลีนีเซีย Name",
     "French Polynesia": "ฝรั่งเศสโพลีนีเซีย",
     "French Southern Territories": "มาจากทางใต้ทางใต้ของฝรั่งเศสแด",
-    "Full name": "ชื่อเต็ม",
-    "Gabon": "กาบอน name",
-    "Gambia": "แกมเบีย name",
+    "From": "From",
+    "Full name": "ชื่อ - สกุล",
+    "Gabon": "กาบอน",
+    "Gambia": "แกมเบีย",
     "Georgia": "จอร์เจีย",
     "Germany": "เยอรมัน",
     "Ghana": "กานา name",
@@ -281,6 +292,7 @@
     "Iceland": "ไอซ์แลนด์ name",
     "ID": "หมายเลข",
     "If necessary, you may log out of all of your other browser sessions across all of your devices. Some of your recent sessions are listed below; however, this list may not be exhaustive. If you feel your account has been compromised, you should also update your password.": "ถ้าจำเป็นคุณอาจจะออกจากระบบของทั้งหมดของคุณอีกเบราว์เซอร์วาระการใช้งานอีกฝั่งของคุณทั้งหมดอุปกรณ์. บางอย่างที่นายเพิ่งกลุ่มงานชื่อด้านล่างนี้อย่างไรก็ตามองรายการนี้อาจจะไม่ exhaustive. ถ้าคุณรู้สึกบัญชีของคุณมีอยู่ในอันตรายคุณควรจะปรับปรุงรหัสผ่านของคุณ.",
+    "If necessary, you may logout of all of your other browser sessions across all of your devices. Some of your recent sessions are listed below; however, this list may not be exhaustive. If you feel your account has been compromised, you should also update your password.": "If necessary, you may logout of all of your other browser sessions across all of your devices. Some of your recent sessions are listed below; however, this list may not be exhaustive. If you feel your account has been compromised, you should also update your password.",
     "If you already have an account, you may accept this invitation by clicking the button below:": "ถ้าคุณจะทำไปเรียบร้อยแล้วบัญชีไว้บัญชีนึงคุณอาจจะยอมรับการเชื้อเชิญนี้ได้โดยการคลิกที่ปุ่มด้านล่าง:",
     "If you did not create an account, no further action is required.": "หากคุณไม่ได้ดำเนินการสร้างบัญชี, คุณไม่จำเป็นต้องดำเนินการใดๆ.",
     "If you did not expect to receive an invitation to this team, you may discard this email.": "ถ้าคุณยังไม่ได้คาดหวังที่จะได้รับการเชิญเพื่อทีมคุณอาจจะเป็นการละทิ้งนี้อีเมล",
@@ -335,11 +347,16 @@
     "Light": "Light",
     "Lithuania": "ลิธัวเนีย name",
     "Log in": "เข้าสู่ระบบ",
+    "Log In": "เข้าสู่ระบบ",
     "Log out": "ออกจากระบบ",
+    "Log Out": "ออกจากระบบ",
     "Load :perPage More": "โหลด :perPage มากกว่า",
     "Log Out Other Browser Sessions": "ปูมบันทึกออกไปอีกเบราว์เซอร์วาระการใช้งาน@Action:Inmenu Go",
+    "Log Viewer": "Log Viewer",
     "Login": "เข้าสู่ระบบ",
     "Logout": "ออกจากระบบ",
+    "Logout Other Browser Sessions": "Logout Other Browser Sessions",
+    "Logs": "Logs",
     "Luxembourg": "ลักเซมเบิร์ก",
     "Macao": "มาเก๊า",
     "Macedonia": "ทางเหนือมาเซโดเนีย Name",
@@ -352,11 +369,13 @@
     "Malta": "มอลตา name",
     "Manage Account": "จัดการบัญชีผู้ใช้",
     "Manage and log out your active sessions on other browsers and devices.": "จัดการและออกจากระบบของวาระงานที่ใช้งานอยู่บนอื่น browsers และอุปกรณ์.",
+    "Manage and logout your active sessions on other browsers and devices.": "Manage and logout your active sessions on other browsers and devices.",
     "Manage API Tokens": "จัดการรูปแบบ api สัญลักษณ์",
     "Manage Role": "จัดการบทบาท",
     "Manage Team": "จัดการทีม",
     "Managing billing for :billableName": "Managing billing for :billableName",
     "March": "มีนาคม",
+    "Mark all as Read": "Mark all as Read",
     "Marshall Islands": "หมู่เกาะมาแชล Name",
     "Martinique": "มาทินิค name",
     "Mauritania": "มอริทาเนีย name",
@@ -384,6 +403,7 @@
     "Nepal": "แสงธรรมชาติ",
     "Netherlands": "เนเธอร์แลนด์",
     "Netherlands Antilles": "Netherlands Antilles",
+    "Nevermind": "Nevermind",
     "Nevermind, I'll keep my old plan": "Nevermind, I'll keep my old plan",
     "New": "คนใหม่",
     "New :resource": "ใหม่ :resource",
@@ -408,6 +428,7 @@
     "Northern Mariana Islands": "หมู่เกาะมาเรียนเหนือ",
     "Norway": "นอร์เวย์ name",
     "Not Found": "ไม่พบ",
+    "Notifications": "Notifications",
     "Nova User": "โนวาสโคของผู้ใช้",
     "November": "พฤศจิกายน",
     "October": "ตุลาคม",
@@ -450,8 +471,10 @@
     "Please confirm your password before continuing.": "Please confirm your password before continuing.",
     "Please copy your new API token. For your security, it won't be shown again.": "ได้โปรดคัดลอกใหม่ของคุณรูปแบบ api ตั๋วเข้าใช้งาน. สำหรับมรปภ.ของคุณมันจะไม่ถูกแสดงอีกครั้ง",
     "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.": "โปรดป้อนรหัสผ่านของคุณเพื่อยืนยันคุณอยากจะออกจากระบบของของคุณอีกเบราว์เซอร์วาระการใช้งานอีกฝั่งของคุณทั้งหมดอุปกรณ์.",
+    "Please enter your password to confirm you would like to logout of your other browser sessions across all of your devices.": "Please enter your password to confirm you would like to logout of your other browser sessions across all of your devices.",
     "Please provide a maximum of three receipt emails addresses.": "Please provide a maximum of three receipt emails addresses.",
     "Please provide the email address of the person you would like to add to this team.": "โปรดกำหนดที่อยู่อีเมลของคนที่คุณอยากจะเพิ่มไปยังทีมนี้",
+    "Please provide the email address of the person you would like to add to this team. The email address must be associated with an existing account.": "Please provide the email address of the person you would like to add to this team. The email address must be associated with an existing account.",
     "Please provide your name.": "โปรดกำหนดชื่อของคุณ",
     "Poland": "โปแลนด์ name",
     "Portugal": "โปรตุเกส",
@@ -468,6 +491,7 @@
     "Receipt Email Addresses": "Receipt Email Addresses",
     "Receipts": "Receipts",
     "Recovery Code": "การรักษารหัส",
+    "Refresh": "รีเฟรช",
     "Regards": "ด้วยความนับถือ",
     "Regenerate Recovery Codes": "Regenerate หารหัส",
     "Register": "ลงทะเบียน",
@@ -518,13 +542,19 @@
     "Saudi Arabia": "ซาอุดิอราเบีย",
     "Save": "บันทึก",
     "Saved.": "ปลอดภัย",
+    "Scroll to bottom": "Scroll to bottom",
+    "Scroll to top": "Scroll to top",
     "Search": "การค้นหา",
     "Select": "Select",
     "Select a different plan": "Select a different plan",
+    "Select a log file...": "Select a log file...",
     "Select A New Photo": "เลือกภาพถ่ายใหม่",
     "Select Action": "เลือกการกระทำ",
     "Select All": "เลือกทั้งหมด",
+    "Select all": "เลือกทั้งหมด",
+    "Select All Dropdown": "Select All Dropdown",
     "Select All Matching": "เลือกทั้งคู่",
+    "Select this page": "Select this page",
     "Send Password Reset Link": "ส่งลิงค์สำหรับรีเซตรหัสผ่าน",
     "Senegal": "เซนีกัล name",
     "September": "กันยายน",
@@ -556,9 +586,11 @@
     "Sri Lanka": "ศรีลังกา Name",
     "Standalone Actions": "Standalone Actions",
     "Start Polling": "เริ่มต้นดเลือกตั้งในพื้น",
+    "Start polling": "Start polling",
     "State / County": "State / County",
     "Stop Impersonating": "Stop Impersonating",
     "Stop Polling": "หยุดเลือกตั้งในพื้น",
+    "Stop polling": "Stop polling",
     "Store these recovery codes in a secure password manager. They can be used to recover access to your account if your two factor authentication device is lost.": "ร้านขายพวกนี้รักษารหัสในความปลอดภัยไว้ซึ่งรหัสผ่านผู้จัดการ พวกเขาสามารถถูกใช้เพื่อฟื้นตัวจากการเจ็บป่เข้าถึงบัญชีของคุณถ้าคุณสองคนปัจจัการตรวจสอบสิทธิ์ของอุปกรณ์กำลังเสียฐานที่มั่นซึริบาชิ",
     "Subscribe": "Subscribe",
     "Subscription Information": "Subscription Information",
@@ -607,16 +639,20 @@
     "The :resource was restored!": "ที่ :resource นถูกเรียกคืน!",
     "The :resource was updated!": "ที่ :resource ถูกปรับปรุง!",
     "The action ran successfully!": "กการวิ่งเรียบร้อยแล้!",
+    "The action was executed successfully.": "The action was executed successfully.",
     "The file was deleted!": "แฟ้มที่ถูกลบออกไป!",
     "The given :attribute has appeared in a data leak. Please choose a different :attribute.": "The given :attribute has appeared in a data leak. Please choose a different :attribute.",
+    "The given data was invalid.": "The given data was invalid.",
     "The government won't let us show you what's behind these doors": "รัฐบาลจะไม่ปล่อยให้พวกเราแสดงให้พวกเธอเห็นว่าอะไรอยู่เบื้องหลังประตูพวกนี้",
     "The HasOne relationship has already been filled.": "ที่ HasOne ความสัมพันธ์มีคนอยู่แล้ว",
+    "The image could not be loaded": "The image could not be loaded",
     "The password is incorrect.": "The password is incorrect.",
     "The payment was successful.": "จ่ายเป็นคนที่ประสบผลสำเร็จเลย",
     "The provided coupon code is invalid.": "The provided coupon code is invalid.",
     "The provided password does not match your current password.": "ที่เตรียมไว้ให้ด้านล่างรหัสผ่านไม่ตรงกับของคุณปัจจุบันรหัสผ่าน",
     "The provided password was incorrect.": "ที่เตรียมไว้ให้ด้านล่างรหัสผ่านไม่ถูกต้อง",
     "The provided two factor authentication code was invalid.": "ที่เตรียมไว้ให้ด้านล่างสองคนปัจจัการตรวจสอบสิทธิ์ของรหัสเป็นไม่ถูกต้อง",
+    "The provided two factor recovery code was invalid.": "The provided two factor recovery code was invalid.",
     "The provided VAT number is invalid.": "The provided VAT number is invalid.",
     "The receipt emails must be valid email addresses.": "The receipt emails must be valid email addresses.",
     "The resource was attached!": "The resource was attached!",
@@ -650,7 +686,8 @@
     "This user already belongs to the team.": "นี่ของผู้ใช้แล้วเป็นของทีม",
     "This user has already been invited to the team.": "นี่ของผู้ใช้คนเพิ่งถูกเชิญไปเข้าร่วมกับองทีม",
     "Timor-Leste": "ติมอร์ตะวันออก",
-    "to": "ต้อง",
+    "to": "ถึง",
+    "To": "ถึง",
     "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.",
     "Today": "วันนี้",
     "Toggle navigation": "แสดง/ซ่อนแถบนำทาง comment",
@@ -672,6 +709,8 @@
     "Tuvalu": "ตูวาลู name",
     "Two Factor Authentication": "สองคนปัจจัการตรวจสอบสิทธิ์",
     "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.",
+    "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application.": "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application.",
+    "Type": "Type",
     "Uganda": "ยูกันดา name",
     "Ukraine": "ยูเครน",
     "Unauthorized": "ไม่มีสิทธิ",
